modified h1 and fixed gap between elements in form-container

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -11,12 +11,15 @@ h1 {
   text-align: center;
   color: #186f65;
   background-color: #fce09b;
-  border: 0px;
+  /* border: 10px; */
   border-bottom: 15px;
-  border-style:groove;
-  border-color: #186f65;
+  border-style:inset;
+  border-color: #B2533E;
   margin: 0px;
+  margin-bottom: 3%;
   min-height: fit-content;
+  border-bottom-left-radius: 43px;
+  border-bottom-right-radius: 43px;
 }
 button {
   font-family: "Bowlby One SC", cursive;
@@ -40,14 +43,14 @@ h2 {
 }
 form {
   background-color: #B5CB99;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 10%;
+  margin-right: 10%;
   display: flex;
   flex-direction: column;
   padding: 2%;
-  /* width: 50%; */
-  justify-self: center;
-  border-radius: 20%;
+  border-radius: 43px;
+  border-style:hidden;
+  /* border-color: aqua; */
 }
 input {
   align-self:center;
@@ -59,8 +62,8 @@ input {
   flex-wrap: wrap;
   flex-flow:wrap;
   justify-content: center;
-  /* width: fit-content; */
-  /* background-color: blue; */
+  gap: 20%;
+  /* background-color: aliceblue; */
 }
 p {
   font-style: italic;
